[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garage61-mcp"
version = "0.1.0"
description = "MCP server for Garage61 iRacing telemetry API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "garage61", "iracing", "telemetry", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/garage61-mcp"
Repository = "https://github.com/yourusername/garage61-mcp"
Issues = "https://github.com/yourusername/garage61-mcp/issues"

[project.scripts]
garage61-mcp = "__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.py-modules]
py-modules = ["__init__", "__main__", "server", "api_client", "cache", "tools"]